// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostBodyAdditionalContent Use default image when metadata does not exist 1`] = `
<TouchableWithFeedbackIOS
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "justifyContent": "flex-start",
        "marginBottom": 6,
        "marginTop": 10,
      },
      Object {
        "height": 150,
      },
    ]
  }
  type="opacity"
>
  <ForwardRef(forwardConnectRef)
    imageUri="https://i.ytimg.com/vi/n_4CVqKOCm8/hqdefault.jpg"
    isBackgroundImage={true}
    onError={[Function]}
    resizeMode="cover"
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
          "marginVertical": 1,
        },
        Object {
          "height": 150,
          "width": 297,
        },
      ]
    }
    thumbnailUri="https://i.ytimg.com/vi/n_4CVqKOCm8/default.jpg"
  >
    <TouchableWithFeedbackIOS
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
      type="opacity"
    >
      <Image
        onPress={[Function]}
        source={
          Object {
            "testUri": "../../../dist/assets/images/icons/youtube-play-icon.png",
          }
        }
      />
    </TouchableWithFeedbackIOS>
  </ForwardRef(forwardConnectRef)>
</TouchableWithFeedbackIOS>
`;

exports[`PostBodyAdditionalContent Use opengraph data when metadata exists 1`] = `
<TouchableWithFeedbackIOS
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "justifyContent": "flex-start",
        "marginBottom": 6,
        "marginTop": 10,
      },
      Object {
        "height": 150,
      },
    ]
  }
  type="opacity"
>
  <ForwardRef(forwardConnectRef)
    imageUri="secureUrl.jpg"
    isBackgroundImage={true}
    onError={[Function]}
    resizeMode="cover"
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderRadius": 3,
          "justifyContent": "center",
          "marginVertical": 1,
        },
        Object {
          "height": 150,
          "width": 297,
        },
      ]
    }
    thumbnailUri="secureUrl.jpg"
  >
    <TouchableWithFeedbackIOS
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
      type="opacity"
    >
      <Image
        onPress={[Function]}
        source={
          Object {
            "testUri": "../../../dist/assets/images/icons/youtube-play-icon.png",
          }
        }
      />
    </TouchableWithFeedbackIOS>
  </ForwardRef(forwardConnectRef)>
</TouchableWithFeedbackIOS>
`;
